--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
